--- a/Flower WebSite/css/style.css
+++ b/Flower WebSite/css/style.css
@@ -84,7 +84,7 @@ header .fa-bars {
 }
 
 section {
-    padding: 20rem 9%;
+    padding: 2rem 9%;
 }
 
 .heading {
@@ -122,6 +122,7 @@ section {
     background: url(../img/banner.jpg) no-repeat;
     background-size: cover;
     background-position: center;
+    padding: 20rem 9%;
 }
 
 .home .content {
@@ -158,6 +159,7 @@ section {
 .about .row .video-container {
     flex: 1 1 30rem;
     position: relative;
+    padding-bottom: 1rem;
 }
 
 .about .row .video-container video {
@@ -197,7 +199,40 @@ section {
     line-height: 1.5;
 }
 
+.icons-container {
+    background-color: var(--white_bone);
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
 
+.icons-container .icons {
+    background: var(--white);
+    border: .1rem solid rgba(0,0,0,.1);
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    flex: 1 1 15rem;
+}
+
+.icons-container .icons img {
+    height: 3rem;
+    margin-right: 2rem;
+    
+}
+
+.icons-container .icons h3 {
+    color: var(--grey);
+    padding-bottom: .5rem;
+    font-size: 1.5rem;
+}
+
+.icons-container .icons span {
+    color: #555;
+    font-size: 1rem;
+}
 
 
 
@@ -264,6 +299,17 @@ section {
    .home .content span {
     font-size: 2.5rem;
    }
+
+   .icons-container .icons h3 {
+    color: var(--grey);
+    padding-bottom: .5rem;
+    font-size: 1.5rem;
+}
+
+.icons-container .icons span {
+    color: #555;
+    font-size: 1rem;
+}
 
 }
 
