--- a/Flower WebSite/css/style.css
+++ b/Flower WebSite/css/style.css
@@ -224,9 +224,9 @@ section {
 }
 
 .icons-container .icons h3 {
-    color: var(--grey);
+    color: var(--pink);
     padding-bottom: .5rem;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
 }
 
 .icons-container .icons span {
@@ -301,14 +301,11 @@ section {
    }
 
    .icons-container .icons h3 {
-    color: var(--grey);
-    padding-bottom: .5rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 
 .icons-container .icons span {
-    color: #555;
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
 
 }
