--- a/Flower WebSite/css/style.css
+++ b/Flower WebSite/css/style.css
@@ -234,6 +234,20 @@ section {
     font-size: 1rem;
 }
 
+.products .box-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.products .box-container .box {
+    flex: 1 1 30rem;
+    box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
+    border-radius: .5rem;
+    border: .1rem solid rgba(0,0,0,.1);
+    position: relative;
+}
+
 
 
 
