--- a/Flower WebSite/css/style.css
+++ b/Flower WebSite/css/style.css
@@ -18,6 +18,7 @@
     text-decoration: none;
     text-transform: capitalize;
     transition: .2s linear;
+    
 }
 
 html {
@@ -328,10 +329,64 @@ section {
     text-decoration: line-through;
 }
 
+.review .box-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
 
+.review .box-container .box {
+    flex: 1 1 30 rem;
+    box-shadow: 0 .5rem rgba(0,0,0,.1);
+    border-radius: .5rem;
+    padding: 3rem 2rem;
+    position: relative;
+    border: .1rem solid rgba(0,0,0,.1);
+}
 
+.review .box-container .box .fa-quote-rigth {
+    position: absolute;
+    bottom: 3rem;
+    right: 3rem;
+    font-size: 6rem;
+    color: var(--light_grey);
+}
 
+.review .box-container .box .stars {
+    color: var(--pink);
+    font-size: 1.5rem;
+}
 
+.review .box-container .box p {
+    color: var(--white-grey);
+    font-size: 1rem;
+    line-height: 1.5;
+    padding-top: 2rem;
+}
+
+.review .box-container .box .user {
+    display: flex;
+    align-items: center;
+    padding-top: 2rem;
+}
+
+.review .box-container .box .user img {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 1rem;
+}
+
+.review .box-container .box .user h3 {
+    font-size: 2rem;
+    color: var(--grey);
+}
+
+.review .box-container .box .user span {
+    font-size: 1.3rem;
+    color: var(--light_grey);
+}
 
 
 
